--- a/src/shared/components/Button/Button.hbs
+++ b/src/shared/components/Button/Button.hbs
@@ -1,6 +1,13 @@
-<button class="ui-button ui-button--{{variant}}{{#if fullWidth}} ui-button--block{{/if}}" type="{{type}}" {{#if disabled}}disabled{{/if}}>
+<button
+    class="ui-button ui-button--{{variant}}{{#if fullWidth}} ui-button--block{{/if}}"
+    type="{{type}}"
+    {{#if disabled}}disabled{{/if}}
+    {{#if ariaLabel}}aria-label="{{ariaLabel}}"{{/if}}
+>
     {{#if icon}}
         <span class="ui-button__icon">{{{icon}}}</span>
     {{/if}}
-    <span class="ui-button__label">{{label}}</span>
+    {{#if label}}
+        <span class="ui-button__label">{{label}}</span>
+    {{/if}}
 </button>
