--- a/src/routes/auth/components/AuthForm/AuthForm.scss
+++ b/src/routes/auth/components/AuthForm/AuthForm.scss
@@ -1,8 +1,7 @@
-
 .auth-form {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: 12px;
   width: 100%;
 
   &__fields {
@@ -18,8 +17,9 @@
     font-weight: 600;
     text-decoration: none;
     transition: color .15s ease;
-    margin-top: -16px;
-
+    margin-top: 8px;
+    margin-bottom: 32px;
+    
     &:hover {
       color: #3242b0;
     }
@@ -28,8 +28,12 @@
   &__actions {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 20px;
 
+    &:hover {
+      
+    }
+    
     .ui-button {
       width: 100%;
     }
