--- a/src/shared/components/RadioGroup/RadioGroup.scss
+++ b/src/shared/components/RadioGroup/RadioGroup.scss
@@ -3,18 +3,21 @@
   padding: 0;
   margin: 0;
   display: flex;
-  flex-direction: column;
+  align-items: center;
   gap: 12px;
   font-family: 'Nunito Sans', sans-serif;
 
   &__label {
-    font-weight: 600;
+    font-weight: 400;
     font-size: 16px;
   }
-
+  
   &__options {
+    padding-left: 32px;
     display: flex;
-    gap: 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 52px;
   }
 
   &__option {
