--- a/src/app/components/AuthLayout/AuthLayout.scss
+++ b/src/app/components/AuthLayout/AuthLayout.scss
@@ -23,8 +23,9 @@
     padding: 40px;
     padding-right: 50px;
     box-sizing: border-box;
+    padding-bottom: 150px;
   }
-
+  
   &__logo {
     display: flex;
     align-items: center;
