--- a/src/shared/components/AvatarButton/AvatarButton.scss
+++ b/src/shared/components/AvatarButton/AvatarButton.scss
@@ -3,11 +3,10 @@
   border: none;
   cursor: pointer;
   padding: 8px;
-  border-radius: 12px;
+  border-radius: 50%;
   transition: background .12s ease;
 
   &:hover {
-    background: rgba(81, 99, 235, 0.08);
   }
 }
 
@@ -17,8 +16,8 @@
   justify-content: center;
   font-size: 16px;
   font-weight: 600;
-  width: 32px;
-  height: 32px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   background: #d9f0d9;
   color: #397639;
