--- a/src/shared/components/MailItem/MailItem.scss
+++ b/src/shared/components/MailItem/MailItem.scss
@@ -7,7 +7,7 @@
   cursor: pointer;
   transition: background .12s ease;
   border-bottom: 1px solid #D6E3F3;
-  border-radius: 12px 12px 0 0;
+  border-radius: 12px;
 
 
   &__left {
