--- a/src/shared/components/SearchInput/SearchInput.scss
+++ b/src/shared/components/SearchInput/SearchInput.scss
@@ -5,14 +5,14 @@
   height: 48px;
   display: flex;
   align-items: center;
-  background: #f5f6fa;
-  border: 1px solid rgba(0, 0, 0, 0.08);
-  border-radius: 24px;
+  background: #E2E7F0;
+  border-radius: 12px;
   padding: 0 16px 0 44px;
   box-sizing: border-box;
   background-image: url("../../../../public/img/search-normal.png");
   background-repeat: no-repeat;
   background-position: 16px center;
+  margin-top: 8px;
 }
 
 .header__search-input {
