--- a/src/shared/widgets/Header/Header.hbs
+++ b/src/shared/widgets/Header/Header.hbs
@@ -11,11 +11,6 @@
     <div class="header__right">
         <div data-slot="search"></div>
         <div data-slot="avatar"></div>
-
-        <div class="header__avatar-menu" role="menu" aria-hidden="true">
-            <button class="avatar-menu__item" data-avatar-profile>Профиль</button>
-            <button class="avatar-menu__item" data-avatar-settings>Настройки</button>
-            <button class="avatar-menu__item" data-avatar-logout>Выйти</button>
-        </div>
+        <div class="header__avatar-menu" role="menu" aria-hidden="true" data-slot="menu"></div>
     </div>
 </div>
