--- a/src/shared/components/SearchInput/SearchInput.scss
+++ b/src/shared/components/SearchInput/SearchInput.scss
@@ -12,7 +12,6 @@
   background-image: url("../../../../public/img/search-normal.png");
   background-repeat: no-repeat;
   background-position: 16px center;
-  margin-top: 8px;
 }
 
 .header__search-input {
@@ -22,6 +21,7 @@
   background: transparent;
   font-size: 16px;
   outline: none;
+  margin-left: 8px;
 }
 
 .header__search-input::placeholder {
