--- a/src/routes/inbox/components/ComposeModal/ComposeModal.hbs
+++ b/src/routes/inbox/components/ComposeModal/ComposeModal.hbs
@@ -15,8 +15,12 @@
         </div>
 
         <div class="compose-modal__inputs">
-          <input class="compose-modal__input" type="text" placeholder="Кому:" data-field="to" />
-          <input class="compose-modal__input" type="text" placeholder="Тема письма:" data-field="subject" />
+          <div class="compose-modal__inputs-text">
+            Кому: <input class="compose-modal__input" type="text" data-field="to" />
+          </div>
+          <div class="compose-modal__inputs-text">
+            Тема: <input class="compose-modal__input" type="text" data-field="subject" />
+          </div>
         </div>
       </div>
 
@@ -24,9 +28,7 @@
         <div class="compose-modal__action-slot" data-slot="attach"></div>
         <div class="compose-modal__action-slot" data-slot="draft"></div>
       </div>
-
       <textarea class="compose-modal__textarea" placeholder="Текст письма" data-field="body"></textarea>
-
       <div class="compose-modal__footer">
         <div class="compose-modal__send-slot" data-slot="send"></div>
       </div>
