--- a/src/routes/inbox/components/ComposeModal/ComposeModal.hbs
+++ b/src/routes/inbox/components/ComposeModal/ComposeModal.hbs
@@ -25,7 +25,7 @@
         <div class="compose-modal__action-slot" data-slot="draft"></div>
       </div>
 
-      <textarea class="compose-modal__textarea" placeholder="Текст письма" data-field="body"></textarea>
+      <textarea class="compose-modal__textarea" placeholder="Текст сообщения" data-field="body"></textarea>
 
       <div class="compose-modal__footer">
         <div class="compose-modal__send-slot" data-slot="send"></div>
@@ -33,3 +33,4 @@
     </div>
   </div>
 </div>
+
