--- a/src/app/components/MainLayout/MainLayout.hbs
+++ b/src/app/components/MainLayout/MainLayout.hbs
@@ -7,4 +7,8 @@
     </div>
 
     <div data-slot="modal" class="main-layout__modal-root"></div>
+
+    <div class="main-layout__loading" aria-hidden="true">
+        <div class="main-layout__spinner"></div>
+    </div>
 </div>
