--- a/src/routes/inbox/components/MailView/MailView.hbs
+++ b/src/routes/inbox/components/MailView/MailView.hbs
@@ -14,7 +14,7 @@
   <div class="mail-view__summary">
     <div class="mail-view__avatar">
       {{#if avatarUrl}}
-        <img src="{{avatarUrl}}" alt="{{from}}" />
+        <img src="{{avatarUrl}}" alt="{{from}}" loading="lazy" decoding="async" />
       {{else}}
         <span>{{initials}}</span>
       {{/if}}
