--- a/src/routes/register/components/RegisterForm/RegisterForm.scss
+++ b/src/routes/register/components/RegisterForm/RegisterForm.scss
@@ -9,6 +9,10 @@
     gap: 16px;
     margin-bottom: 16px;
   }
+
+  &__fields > * {
+    position: relative;
+  }
   
   &__actions {
     display: flex;
