--- a/src/shared/components/AvatarButton/AvatarButton.hbs
+++ b/src/shared/components/AvatarButton/AvatarButton.hbs
@@ -1,6 +1,6 @@
 <button type="button" class="header__avatar-btn" data-avatar-button>
     {{#if imageUrl}}
-        <img class="header__avatar header__avatar--image" src="{{imageUrl}}" alt="{{label}}" />
+        <img class="header__avatar header__avatar--image" src="{{imageUrl}}" alt="{{label}}" loading="lazy" decoding="async" />
     {{else}}
         <span class="header__avatar">{{label}}</span>
     {{/if}}
