--- a/src/pages/register/components/RegisterForm/RegisterForm.hbs
+++ b/src/pages/register/components/RegisterForm/RegisterForm.hbs
@@ -7,5 +7,6 @@
         <div data-slot="password"></div>
         <div data-slot="passwordRepeat"></div>
     </div>
+    <div class="register-form__error" data-slot="error" aria-live="polite"></div>
     <div class="register-form__actions" data-slot="submit"></div>
 </form>
