--- a/src/pages/register/components/RegisterForm/RegisterForm.scss
+++ b/src/pages/register/components/RegisterForm/RegisterForm.scss
@@ -13,6 +13,22 @@
   &__fields > * {
     position: relative;
   }
+
+  &__error {
+    min-height: 20px;
+    margin-bottom: 12px;
+    color: var(--color-error, #d14343);
+    font-size: 14px;
+    line-height: 20px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.15s ease;
+
+    &--visible {
+      visibility: visible;
+      opacity: 1;
+    }
+  }
   
   &__actions {
     display: flex;
