--- a/src/shared/widgets/Sidebar/Sidebar.hbs
+++ b/src/shared/widgets/Sidebar/Sidebar.hbs
@@ -1,5 +1,5 @@
 <aside class="sidebar">
-    <button class="sidebar__compose" data-compose>Написать письмо</button>
+    <button class="sidebar__compose" data-compose>{{composeButtonText}}</button>
 
     <ul class="sidebar__folders" data-slot="folders"></ul>
 </aside>
