--- a/src/pages/inbox/components/MailView/MailView.hbs
+++ b/src/pages/inbox/components/MailView/MailView.hbs
@@ -26,7 +26,7 @@
         <span class="mail-view__email">{{fromEmail}}</span>
       </div>
       <div class="mail-view__details-row">
-        <span class="mail-view__label">Кому:</span>
+        <span class="mail-view__label">{{recipientLabel}}</span>
         <span class="mail-view__recipient">{{recipient}}</span>
         <span class="mail-view__time">{{time}}</span>
       </div>
