--- a/src/pages/profile/components/ProfileForm/ProfileForm.hbs
+++ b/src/pages/profile/components/ProfileForm/ProfileForm.hbs
@@ -1,5 +1,5 @@
-<div class="profile-form">
-  <h1 class="profile-form__title">Профиль</h1>
+﻿<div class="profile-form">
+  <h1 class="profile-form__title">{{title}}</h1>
 
   <div class="profile-form__content">
     <div class="profile-form__avatar">
