--- a/src/shared/components/InputField/InputField.hbs
+++ b/src/shared/components/InputField/InputField.hbs
@@ -10,6 +10,7 @@
         value="{{value}}"
         {{#if autocomplete}}autocomplete="{{autocomplete}}" {{/if}}
         {{#if required}}required{{/if}}
+        {{#if disabled}}disabled{{/if}}
         data-input
     />
     {{#if hint}}
