--- a/src/shared/components/MailItem/MailItem.scss
+++ b/src/shared/components/MailItem/MailItem.scss
@@ -54,6 +54,12 @@
     }
   }
 
+  &__avatar-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
   &__from {
     min-width: 0;
     font-weight: 700;
