--- a/src/shared/components/RadioGroup/RadioGroup.hbs
+++ b/src/shared/components/RadioGroup/RadioGroup.hbs
@@ -8,6 +8,7 @@
                     name="{{../name}}"
                     value="{{value}}"
                     {{#if checked}}checked{{/if}}
+                    {{#if disabled}}disabled{{/if}}
                     data-value="{{value}}"
                 />
                 <span>{{label}}</span>
