--- a/src/shared/components/MailItem/MailItem.hbs
+++ b/src/shared/components/MailItem/MailItem.hbs
@@ -1,17 +1,20 @@
 <article class="mail-item {{#unless isRead}}mail-item--unread{{/unless}}" data-mail-id="{{id}}">
     <div class="mail-item__left">
         <div class="mail-item__status" aria-hidden="true"></div>
-        {{#if avatarUrl}}
-            <img
-              src="{{avatarUrl}}"
-              alt="{{from}}"
-              class="mail-item__avatar mail-item__avatar-image"
-              loading="lazy"
-              decoding="async"
-            />
-        {{else}}
-            <div class="mail-item__avatar mail-item__avatar--placeholder">{{initials}}</div>
-        {{/if}}
+        <div class="mail-item__avatar-wrapper" data-avatar-root>
+            {{#if avatarUrl}}
+                <div
+                    class="mail-item__avatar mail-item__avatar--placeholder"
+                    data-avatar-placeholder
+                >
+                    {{initials}}
+                </div>
+            {{else}}
+                <div class="mail-item__avatar mail-item__avatar--placeholder">
+                    {{initials}}
+                </div>
+            {{/if}}
+        </div>
         <span class="mail-item__from" title="{{from}}">{{from}}</span>
     </div>
 
