--- a/src/pages/inbox/components/MailView/MailView.scss
+++ b/src/pages/inbox/components/MailView/MailView.scss
@@ -82,6 +82,18 @@
       height: 100%;
       object-fit: cover;
     }
+
+    .mail-view__avatar-initials {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    img + .mail-view__avatar-initials {
+      display: none;
+    }
   }
 
   &__details {
