--- a/src/shared/components/Button/Button.hbs
+++ b/src/shared/components/Button/Button.hbs
@@ -2,6 +2,7 @@
     class="ui-button ui-button--{{variant}}{{#if fullWidth}} ui-button--block{{/if}}"
     type="{{type}}"
     {{#if disabled}}disabled{{/if}}
+    aria-disabled="{{#if disabled}}true{{else}}false{{/if}}"
     {{#if ariaLabel}}aria-label="{{ariaLabel}}"{{/if}}
 >
     {{#if icon}}
