--- a/src/pages/profile/components/ProfileForm/ProfileForm.hbs
+++ b/src/pages/profile/components/ProfileForm/ProfileForm.hbs
@@ -9,6 +9,7 @@
         <span>{{initials}}</span>
       {{/if}}
       <div class="profile-form__upload" data-slot="upload"></div>
+      <p class="profile-form__avatar-error" data-avatar-error></p>
     </div>
 
     <div class="profile-form__fields">
