--- a/src/pages/profile/components/ProfileForm/ProfileForm.scss
+++ b/src/pages/profile/components/ProfileForm/ProfileForm.scss
@@ -56,6 +56,21 @@
     }
   }
 
+  &__avatar-error {
+    margin: 0;
+    font-size: 13px;
+    line-height: 1.3;
+    color: #d14343;
+    text-align: center;
+    min-height: 1.3em;
+    opacity: 0;
+    transition: opacity 0.2s ease;
+
+    &--visible {
+      opacity: 1;
+    }
+  }
+
   &__fields {
     flex: 1;
     display: flex;
