--- a/src/pages/auth/components/AuthForm/AuthForm.hbs
+++ b/src/pages/auth/components/AuthForm/AuthForm.hbs
@@ -4,6 +4,6 @@
         <div class="auth-form__field" data-slot="password"></div>
     </div>
     <div class="auth-form__error" data-slot="error" aria-live="polite"></div>
-    <a href="#" class="auth-form__forgot" data-action="forgot">{{forgotPasswordText}}</a>
+    <a href="#" class="auth-form__forgot--disabled" data-action="forgot">{{forgotPasswordText}}</a>
     <div class="auth-form__actions" data-slot="submit"></div>
 </form>
