--- a/src/app/components/AuthLayout/AuthLayout.scss
+++ b/src/app/components/AuthLayout/AuthLayout.scss
@@ -22,8 +22,9 @@
     justify-content: flex-start;
     padding: 40px;
     padding-right: 50px;
+    padding-top: 20px;
+    padding-bottom: 30px;
     box-sizing: border-box;
-    padding-bottom: 60px;
   }
   
   &__logo {
