--- a/src/shared/components/MailItem/MailItem.scss
+++ b/src/shared/components/MailItem/MailItem.scss
@@ -1,6 +1,6 @@
 .mail-item {
   display: grid;
-  grid-template-columns: auto minmax(160px, 1fr) minmax(200px, 1.2fr) auto;
+  grid-template-columns: 10% 10% 10% 10%;
   align-items: center;
   column-gap: 16px;
   padding: 12px 16px;
@@ -8,7 +8,7 @@
   transition: background .12s ease;
   border-bottom: 1px solid #D6E3F3;
   border-radius: 12px;
-
+  justify-content: space-between;
 
   &__left {
     display: flex;
