--- a/src/app/components/MainLayout/MainLayout.scss
+++ b/src/app/components/MainLayout/MainLayout.scss
@@ -8,8 +8,9 @@
   &__header {
     height: 80px;
     display: flex;
-    align-items: top;
+    align-items: center;
     padding: 0 20px;
+    user-select: none;
   }
 
   &__container {
