--- a/src/shared/components/MailItem/MailItem.scss
+++ b/src/shared/components/MailItem/MailItem.scss
@@ -8,7 +8,7 @@
   transition: background .12s ease;
   border-bottom: 1px solid #D6E3F3;
   border-radius: 12px;
-
+  justify-content: space-between;
 
   &__left {
     display: flex;
@@ -42,6 +42,7 @@
     height: 36px;
     border-radius: 50%;
     object-fit: cover;
+    user-select: none;
 
     &--placeholder {
       display: flex;
