-выделение текста +форматирование модального окна

--- a/src/pages/inbox/components/ComposeModal/ComposeModal.scss
+++ b/src/pages/inbox/components/ComposeModal/ComposeModal.scss
@@ -107,10 +107,11 @@
 }
 
 .compose-modal__input {
-  width: 600px;
+  width: 742px;
   border: none;
   border-bottom: 1px solid #dbe1f1;
   padding: 12px 4px;
+  padding-left: 8px;
   font-size: 16px;
   color: #1f2544;
   outline: none;
