--- a/src/shared/widgets/Sidebar/Sidebar.scss
+++ b/src/shared/widgets/Sidebar/Sidebar.scss
@@ -12,6 +12,7 @@
     font-weight: 600;
     cursor: pointer;
     transition: box-shadow .15s ease, transform .15s ease;
+    user-select: none;
     
     &:hover {
     }
