--- a/src/shared/widgets/SupportWidgetHost/SupportWidgetHost.hbs
+++ b/src/shared/widgets/SupportWidgetHost/SupportWidgetHost.hbs
@@ -1,6 +1,8 @@
 <div class="support-widget-host" data-support-widget>
     <button type="button" class="support-widget-host__button" data-open aria-haspopup="dialog" aria-label="{{buttonAriaLabel}}">
-        <span class="support-widget-host__button-icon">?</span>
+        <span class="support-widget-host__button-icon">
+            <img src="/img/support-logo.svg" alt="">
+        </span>
         <span class="support-widget-host__button-label">{{buttonLabel}}</span>
     </button>
 
