styles modal window

--- a/src/shared/widgets/SupportWidgetHost/SupportWidgetHost.hbs
+++ b/src/shared/widgets/SupportWidgetHost/SupportWidgetHost.hbs
@@ -3,7 +3,6 @@
         <span class="support-widget-host__button-icon">
             <img src="/img/support-logo.svg" alt="">
         </span>
-        <span class="support-widget-host__button-label">{{buttonLabel}}</span>
     </button>
 
     <div class="support-widget-host__modal" data-modal aria-hidden="true">
@@ -12,7 +11,7 @@
             <header class="support-widget-host__header">
                 <h2 class="support-widget-host__title">{{modalTitle}}</h2>
                 <button type="button" class="support-widget-host__close" data-close aria-label="Close window">
-                    x
+                    <img src="/img/close-modal.svg" alt="">
                 </button>
             </header>
             <div class="support-widget-host__frame">
