--- a/src/shared/widgets/SupportWidgetHost/SupportWidgetHost.scss
+++ b/src/shared/widgets/SupportWidgetHost/SupportWidgetHost.scss
@@ -10,6 +10,7 @@
     position: absolute;
     bottom: 32px;
     right: 32px;
+    padding-top: 6px;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -36,8 +37,8 @@
 }
 
 .support-widget-host__button-label {
-    position: absolute;
-    opacity: 0;
+  position: absolute;
+  opacity: 0;
 }
 
 .support-widget-host__modal {
@@ -67,13 +68,12 @@
 .support-widget-host__window {
     position: relative;
     z-index: 1;
-    width: min(520px, calc(100% - 32px));
-    height: min(640px, calc(100% - 120px));
+    width: 700px;
+    height: 700px;
     background: #fff;
     border-radius: 24px;
     display: flex;
     flex-direction: column;
-    box-shadow: 0 30px 60px rgba(17, 23, 58, 0.35);
     overflow: hidden;
 }
 
@@ -87,9 +87,9 @@
 
 .support-widget-host__title {
     margin: 0;
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 700;
-    color: #1f2344;
+    color: #000000;
 }
 
 .support-widget-host__close {
