--- a/src/support-widget/SupportWidgetApp.hbs
+++ b/src/support-widget/SupportWidgetApp.hbs
@@ -1,7 +1,7 @@
 <div class="support-widget-app">
     <header class="support-widget-app__header">
-        <h1 class="support-widget-app__title">Поддержка</h1>
-        <p class="support-widget-app__subtitle">Бандл</p>
+        <h1 class="support-widget-app__title">Расскажите о вашей проблеме</h1>
+        <p class="support-widget-app__subtitle">Все поля обязательны для заполнения. Пожалуйста заполните их внимательно.</p>
     </header>
     <section class="support-widget-app__body">
         <p>
