--- a/src/shared/components/InputField/InputField.hbs
+++ b/src/shared/components/InputField/InputField.hbs
@@ -2,17 +2,29 @@
     {{#if label}}
         <span class="input-field__label">{{label}}</span>
     {{/if}}
-    <input
-        class="input-field__control"
-        type="{{type}}"
-        name="{{name}}"
-        placeholder="{{placeholder}}"
-        value="{{value}}"
-        {{#if autocomplete}}autocomplete="{{autocomplete}}" {{/if}}
-        {{#if required}}required{{/if}}
-        {{#if disabled}}disabled{{/if}}
-        data-input
-    />
+    {{#if isTextarea}}
+        <textarea
+            class="input-field__control input-field__control--textarea"
+            name="{{name}}"
+            placeholder="{{placeholder}}"
+            rows="{{textareaRows}}"
+            {{#if required}}required{{/if}}
+            {{#if disabled}}disabled{{/if}}
+            data-control
+        >{{value}}</textarea>
+    {{else}}
+        <input
+            class="input-field__control"
+            type="{{type}}"
+            name="{{name}}"
+            placeholder="{{placeholder}}"
+            value="{{value}}"
+            {{#if autocomplete}}autocomplete="{{autocomplete}}" {{/if}}
+            {{#if required}}required{{/if}}
+            {{#if disabled}}disabled{{/if}}
+            data-control
+        />
+    {{/if}}
     {{#if hint}}
         <span class="input-field__hint">{{hint}}</span>
     {{/if}}
