--- a/src/shared/components/InputField/InputField.scss
+++ b/src/shared/components/InputField/InputField.scss
@@ -22,6 +22,12 @@
     &::placeholder {
       color: rgba(39, 43, 53, 0.6);
     }
+
+    &--textarea {
+      resize: vertical;
+      min-height: 120px;
+      line-height: 1.4;
+    }
   }
 
   &__hint {
