styles form in modal window

--- a/src/support-widget/SupportWidgetApp.hbs
+++ b/src/support-widget/SupportWidgetApp.hbs
@@ -14,7 +14,7 @@
                 <div data-slot="submit"></div>
             </div>
             <div class="support-widget-form__actions-buttom">
-                <div data-slot="appil"></div>
+                <div data-slot="appeal"></div>
             </div>
         </div>
         <p class="support-widget-form__status" data-status></p>
