--- a/src/support-widget/SupportWidgetApp.scss
+++ b/src/support-widget/SupportWidgetApp.scss
@@ -18,8 +18,6 @@
 
 .support-widget-app__title {
     margin: 0 0 12px;
-    font-size: 28px;
-    font-weight: 700;
     line-height: 1.2;
     font-size: 22px;
     font-weight: 600;
@@ -28,14 +26,14 @@
 .support-widget-app__subtitle {
     margin: 0;
     font-size: 16px;
-    color: #5c6085;
+    color: #000000;
     line-height: 1.5;
     text-align: left;
 }
 
 .support-widget-form {
-    margin: 0 auto;
-    width: min(520px, 100%);
+  margin-left: 20px;
+    width: 500px;
     padding: 12px;
     display: flex;
     flex-direction: column;
@@ -50,7 +48,8 @@
 }
 
 .support-widget-form__actions-buttom {
-    margin-top: 8px;
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 .support-widget-form__status {
@@ -75,7 +74,7 @@
 
     .support-widget-form {
         padding: 20px;
-        border-radius: 18px;
+        border-radius: 12px;
     }
 
 }
