--- a/src/shared/components/MailItem/MailItem.scss
+++ b/src/shared/components/MailItem/MailItem.scss
@@ -1,6 +1,6 @@
 .mail-item {
   display: grid;
-  grid-template-columns: auto minmax(160px, 1fr) minmax(200px, 1.2fr) auto;
+  grid-template-columns: 10% 10% 10% 10%;
   align-items: center;
   column-gap: 16px;
   padding: 12px 16px;
@@ -13,7 +13,7 @@
 
   &__left {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row;
     gap: 10px;
