--- a/src/support-widget/SupportWidgetApp.hbs
+++ b/src/support-widget/SupportWidgetApp.hbs
@@ -1,9 +1,8 @@
 ﻿<div class="support-widget-app">
     <header class="support-widget-app__header">
-        <p class="support-widget-app__eyebrow">FlintMail support</p>
         <h1 class="support-widget-app__title">Расскажите, чем мы можем помочь</h1>
         <p class="support-widget-app__subtitle">
-            Опишите тему и детали — мы свяжемся с ответом и поможем закрыть вопрос.
+            Все поля обязательные. Пожалуйста, заполните их внимательно.
         </p>
     </header>
 
