--- a/src/shared/widgets/SupportWidgetHost/SupportWidgetHost.scss
+++ b/src/shared/widgets/SupportWidgetHost/SupportWidgetHost.scss
@@ -72,7 +72,7 @@
     height: clamp(320px, var(--support-widget-modal-height, 680px), calc(100% - 48px));
     max-width: calc(100% - 24px);
     max-height: calc(100% - 48px);
-    background: #fff;
+    background: #EFF2F7;
     border-radius: 24px;
     display: flex;
     flex-direction: column;
