--- a/src/shared/widgets/Sidebar/Sidebar.hbs
+++ b/src/shared/widgets/Sidebar/Sidebar.hbs
@@ -2,4 +2,9 @@
     <button class="sidebar__compose" data-compose>{{composeButtonText}}</button>
 
     <ul class="sidebar__folders" data-slot="folders"></ul>
+
+    <button class="sidebar__create-folder sidebar-folder sidebar-folder--action" data-create-folder type="button">
+        <span class="sidebar-folder__icon" aria-hidden="true" style="background-image: url('/img/folder-add.svg');"></span>
+        <span class="sidebar-folder__name">Создать папку</span>
+    </button>
 </aside>
