--- a/src/pages/inbox/components/CreateFolderModal/CreateFolderModal.scss
+++ b/src/pages/inbox/components/CreateFolderModal/CreateFolderModal.scss
@@ -17,6 +17,7 @@
   flex-direction: column;
   padding: 16px;
   gap: 12px;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 .create-folder-modal__header {
