--- a/src/app/components/MainLayout/MainLayout.hbs
+++ b/src/app/components/MainLayout/MainLayout.hbs
@@ -3,6 +3,7 @@
 
     <div class="main-layout__container">
         <aside data-slot="sidebar" class="main-layout__sidebar"></aside>
+        <div class="main-layout__sidebar-overlay" data-sidebar-overlay></div>
         <main data-slot="main" class="main-layout__main"></main>
     </div>
 
