--- a/src/shared/widgets/Header/Header.hbs
+++ b/src/shared/widgets/Header/Header.hbs
@@ -1,5 +1,10 @@
 <div class="header">
     <div class="header__left">
+        <button class="header__menu" type="button" aria-label="Меню" data-menu>
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
         <div class="header__logo" data-logo>
             <img src="/img/logo.svg" alt="flintmail" class="header__logo-icon"/>
             <span class="header__logo-text">flintmail</span>
