--- a/src/pages/register/views/RegisterPage.scss
+++ b/src/pages/register/views/RegisterPage.scss
@@ -1,12 +1,15 @@
 .register-page {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  align-items: center;
   text-align: center;
   height: 100%;
+  gap: 16px;
+  max-width: 440px;
+  margin: 0 auto;
 
   &__title {
-    font-size: 40px;
+    font-size: 36px;
     font-weight: 600;
     color: #000000;
     text-align: center;
@@ -15,16 +18,32 @@
   &__form {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    width: 100%;
+    gap: 12px;
   }
 
   &__actions {
-    margin-top: 12px;
+    margin-top: 8px;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    gap: 10px;
 
     .ui-button {
       width: 100%;
+    }
+  }
+
+  @media (max-width: 600px) {
+    max-width: 100%;
+    gap: 12px;
+
+    &__title {
+      font-size: 30px;
+    }
+
+    &__form {
+      gap: 10px;
     }
   }
 }
